# sad_gpu

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp
include/: disparity.cuh  disparity.hpp
src/: disparity.cpp  disparity.cu
